bug#656444: fixed its grammar

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -81,8 +81,8 @@ Skipping %s: File does not exist.=
 Skipping %s: Unsupported file type.=
 Slideshow=
 The image you requested could not be displayed.=
-The user %s is currently defined as the default user and does not have permission to change it's preferences.  The current values are shown below but any changes made will be ignored until a different default user is defined.=
-The user '%s' is currently defined as the default user and does not have permission to change it's password.=
+The user %s is currently defined as the default user and does not have permission to change its preferences.  The current values are shown below but any changes made will be ignored until a different default user is defined.=
+The user '%s' is currently defined as the default user and does not have permission to change its password.=
 There are %s photos=
 There are no photos=
 There is %s photo=
