new notification strings

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -31,9 +31,13 @@ Created directory=
 E-Mail Photo=
 Fields specified below will apply to all images imported.=
 File upload failed=
+For accessing these Albums you may use this URL=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required.  Granting access to all albums will not overwrite previously granted permissions.=
+Hi=
 Home=
+I have created a Zoph account for you=
+I have enabled access to the following albums for you=
 Import=
 Importing Files on the Server=
 Importing a Local File=
@@ -47,6 +51,7 @@ Most Photographed Places=
 Most Populated Albums=
 Most Populated Categories=
 Name=
+New Albums on=
 New Category=
 New Color Scheme=
 New Person=
@@ -63,6 +68,8 @@ No photos were found for this slideshow.=
 No photos were found matching your search criteria.=
 No places were found in a city beginning with '%s'.=
 No=
+Notify User=
+Notify=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 People=
 Photos (Page %s/%s)=
@@ -73,6 +80,7 @@ Processing %s image(s).=
 Reading directory=
 Received file=
 Refine Search=
+Regards=
 Releases and documentation can be found at %s.=
 Reports=
 Search=
@@ -99,6 +107,7 @@ Written by Jason Geiger with thanks to the following for their contributions:=
 Yes=
 You can upload a single image or a zip or tar file of images.=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
+Your Zoph Account=
 Your mail has been sent.=
 Your password has been changed=
 Your password may not be null=
@@ -200,6 +209,8 @@ is in photo=
 is not in photo=
 iso equiv=
 language=
+last ip address=
+last login=
 last modified=
 last name=
 less than=
@@ -261,6 +272,7 @@ rating=
 remove=
 reports=
 return=
+rotate=
 rows=
 search=
 seconds=
