--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -13,6 +13,7 @@ About=
 After this user is created they can be given access to albums.=
 Albums=
 An error occurred.=
+Annotate Photo=
 As an admin, user %s has access to all albums.=
 Categories=
 Change Password=
@@ -161,6 +162,7 @@ confirm=
 continue=
 count=
 country=
+create annotated photo=
 date of birth=
 date of death=
 date=
@@ -277,6 +279,7 @@ rows=
 search=
 seconds=
 send as html=
+send fullsize=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
