Added a few missing strings

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -69,9 +69,9 @@ No photos were found for this slideshow.=
 No photos were found matching your search criteria.=
 No places were found in a city beginning with '%s'.=
 No=
+Not rated=
 Notify User=
 Notify=
-Not rated=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 People=
 Photos (Page %s/%s)=
@@ -183,6 +183,7 @@ description=
 destination path=
 display camera info=
 display=
+edit photos %s to %s of %s=
 edit preferences=
 edit=
 email photo=
@@ -249,6 +250,7 @@ or its children=
 or=
 order by=
 order=
+overwrite values below=
 parent album=
 parent category=
 password=
@@ -289,6 +291,7 @@ show descriptions under thumbnails=
 size of pager on results page=
 size of photos=
 size=
+skip=
 spouse=
 state=
 stop=
