Added strings for the new features in 0.5

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -9,10 +9,12 @@
 10 - museum=
 5 - so so=
 A Photo from %s=
+A photo will be watermarked if the photo level is higher than the watermark
 A possible cause is the upload_max_filesize variable in php.ini=
 About=
 After this user is created they can be given access to albums.=
 Albums=
+All photos=
 An error occurred.=
 Annotate Photo=
 As an admin, user %s has access to all albums.=
@@ -22,18 +24,22 @@ Color Schemes=
 Confirm deletion of '%s' and its subalbums:=
 Confirm deletion of '%s' and its subcategories:=
 Confirm deletion of '%s'=
+Copy Color Scheme=
 Could not build message.=
 Could not copy %s to %s.=
 Could not create directory=
 Could not create thumbnail=
 Could not find photo id %s.=
 Could not open directory=
+Could not rename %s to %s.=
 Could not send mail.=
 Created directory=
+Dated directory will be appended=
 E-Mail Photo=
+Edit Photos (Page %s/%s)=
 Fields specified below will apply to all images imported.=
 File upload failed=
-For accessing these Albums you may use this URL=
+For accessing these Albums you have to use this URL=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required.  Granting access to all albums will not overwrite previously granted permissions.=
 Hi=
@@ -45,14 +51,14 @@ Importing Files on the Server=
 Importing a Local File=
 Importing images...=
 Insert failed.=
+Insufficient permissions to edit photo=
 Invalid path=
-Lightbox (Page %s/%s)=
-Lightbox=
 Most Photographed People=
 Most Photographed Places=
 Most Populated Albums=
 Most Populated Categories=
 Name=
+New Album=
 New Albums on=
 New Category=
 New Color Scheme=
@@ -163,6 +169,7 @@ compression=
 confirm password=
 confirm=
 continue=
+copy=
 count=
 country=
 create annotated photo=
@@ -185,6 +192,7 @@ destination path=
 display camera info=
 display=
 edit photos %s to %s of %s=
+edit photos=
 edit preferences=
 edit=
 email photo=
@@ -213,6 +221,7 @@ in this category=
 insert=
 is in photo=
 is not in photo=
+is not set=
 iso equiv=
 language=
 last ip address=
@@ -220,9 +229,11 @@ last login=
 last modified=
 last name=
 less than=
+level.=
 level=
 lightbox album=
 lightbox=
+like=
 location=
 logon=
 logout=
@@ -238,6 +249,7 @@ new=
 no city=
 no last name=
 no=
+not rated=
 notes=
 number of breadcrumbs to show=
 number of categorized photos=
@@ -246,6 +258,7 @@ number of photos in an album=
 number of photos=
 number of places=
 number of results to display on reports page=
+open fullsize photo in new window=
 open=
 or its children=
 or=
@@ -254,6 +267,7 @@ order=
 overwrite values below=
 parent album=
 parent category=
+parent location=
 password=
 path=
 pause=
@@ -277,6 +291,7 @@ prefs=
 random photo=
 rate=
 rating=
+recreate thumbnails=
 remove=
 reports=
 return=
@@ -293,6 +308,7 @@ size of pager on results page=
 size of photos=
 size=
 skip=
+slideshow=
 spouse=
 state=
 stop=
@@ -311,6 +327,7 @@ username=
 users=
 view photos=
 view=
+watermark level=
 width=
 work=
 writable=
