--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -253,6 +253,7 @@ notes=
 number of breadcrumbs to show=
 number of categorized photos=
 number of people=
+number of people to add at once=
 number of photos in an album=
 number of photos=
 number of places=
@@ -312,6 +313,7 @@ spouse=
 state=
 stop=
 subject=
+submit=
 that have been categorized=
 time to display each photo in a slideshow=
 time=
