Updated author information

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -113,7 +113,7 @@ Up=
 Users=
 Welcome %s.  %s currently contains=
 Work=
-Written by Jason Geiger with thanks to the following for their contributions:=
+Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
 Yes=
 You can upload a single image or a zip or tar file of images.=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
