Include URL to Zoph in e-mails (Req#655957)

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -93,6 +93,7 @@ Regards=
 Releases and documentation can be found at %s.=
 Reports=
 Search=
+See this photo in %s=
 Send feedback to %s.=
 Skipping %s: File does not exist.=
 Skipping %s: Unsupported file type.=
@@ -219,6 +220,7 @@ import=
 in this album=
 in this category=
 in this place=
+include URL=
 insert=
 is in photo=
 is not in photo=
