Possibility to overide sort order of photos in album (Req#665237)

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -80,6 +80,7 @@ Not rated=
 Notify User=
 Notify=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
+Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
 People=
 Photos (Page %s/%s)=
 Places=
@@ -114,7 +115,6 @@ Up=
 Users=
 Welcome %s.  %s currently contains=
 Work=
-Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
 Yes=
 You can upload a single image or a zip or tar file of images.=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
@@ -135,6 +135,7 @@ address=
 admin=
 album description=
 album name=
+album sort order=
 album=
 albums=
 all=
@@ -255,8 +256,8 @@ not rated=
 notes=
 number of breadcrumbs to show=
 number of categorized photos=
-number of people=
 number of people to add at once=
+number of people=
 number of photos in an album=
 number of photos=
 number of places=
