Added possibility to leave comments with photos

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -130,6 +130,7 @@ about=
 access level=
 add/edit user=
 add=
+add comment=
 address continued=
 address=
 admin=
@@ -152,6 +153,7 @@ camera model=
 can browse people=
 can browse places=
 can import=
+can leave comments=
 can view details of people=
 can view details of places=
 cancel=
@@ -168,6 +170,7 @@ color scheme=
 color schemes=
 cols=
 comment=
+comments=
 compression=
 confirm password=
 confirm=
